--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="class-ask">
             <div class="class-ask__wrapper">
                 <div class="class-ask__container">
-                    <div class="class-ask__title">Обери клас</div>
+                    <div class="class-ask__title">Розклад 5-11 класів</div>
                     <div class="class-ask__content" id="class-ask__content">
                         <div class="preloader">
                             <div class="preloader__animation lds-heart">
